--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "courier-cache",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "author": "市民李生生",
   "private": false,
   "description": "一个高效便捷的前端Fetch缓存插件",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "license": "TIM",
   "repository": {
     "type": "git",
     "url": "https://github.com/a707843858/courierCach"
