--- a/package.json
+++ b/package.json
@@ -25,22 +25,12 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.10.0",
-    "node-fetch": "^2.6.1",
-    "typescript": "^4.2.3",
-    "whatwg-fetch": "^3.6.2"
+    "crypto-js": "^4.1.1",
+    "typescript": "4.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build-lib": "webpack"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "start": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "browserslist": {
     "production": [
@@ -55,25 +45,21 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.7",
-    "@types/node-fetch": "^2.5.9",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
     "@types/whatwg-fetch": "^0.0.33",
+    "@webpack-cli/serve": "^1.5.1",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.10.0",
-    "react": "^17.0.2",
-    "react-app-polyfill": "^2.0.0",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "ts-loader": "^8.1.0",
-    "tslint": "^6.1.3",
-    "tslint-loader": "^3.5.4",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "koa": "^2.13.1",
+    "koa-body": "^4.2.0",
+    "koa-router": "^10.0.0",
+    "koa2-cors": "^2.0.6",
+    "ts-loader": "^8.3.0",
+    "tslib": "^2.3.0",
+    "webpack": "5.36.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.2"
   }
 }
