--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./lib/",
-    "sourceMap": false,
-    "declaration": false,
     "target": "es5",
+    "module": "esnext",
+    "sourceMap": false,
     "importHelpers": true,
     "lib": [
       "dom",
@@ -18,15 +17,18 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    "removeComments": true, 
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
-    "noEmit": false
+    "jsx": "preserve",
+    "noEmit": false,
+    "noUnusedLocals": true,             
+    "noUnusedParameters": true, 
   },
   "include": [
-    "src/packages/**/*.ts"
+    "src/packages/**/*.ts",
+    "src/packages/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
