--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,11 @@
 {
-  "presets": [
-    ["env", { "modules": false }],
-    "stage-2"
-  ],
-  "plugins": ["transform-runtime"],
-  "comments": false,
-  "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
-    }
-  }
+	"presets": ["es2015"],
+	"plugins": ["transform-runtime", "transform-object-rest-spread"],
+	"comments": false
+	// "env": {
+	// 	"test": {
+	// 		"presets": ["env", "stage-2"],
+	// 		"plugins": ["istanbul"]
+	// 	}
+	// }
 }
